# pypi-json

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: basic_usage.py  inline_script.py  min_python_version.py  release_dates.py
src/pypi_json/: __init__.py  _cache.py  client.py  exceptions.py  models.py
tests/: test_client.py  test_models.py
